got NavLinks to work correctly. Don't double wrap things in a BrowserRouter (unless you are trying to do something else weird). Todo map is setUp, just need to create the todo table in the database and write the rewquest functions.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-header h2:hover {
+header h3:hover {
   cursor: pointer;
   text-decoration: underline;
 }
